src/main/java/com/example/demo/error/ErrorCode.java
package com.example.demo.error;

public enum ErrorCode {
}
